[PLAT-14072] enable DB scoped switchover
Summary:
Enable DB scoped switchover/failover:
1. Remove the check for unsupported XCluster config type in WaitForReplicationDrain.
2. Change the secondary XCluster config in failover/switchover controller actions to match the primary type.
3. Retrieve stream IDs in WaitForReplicationDrain for the DB scoped case.
4. Use GetUniverseReplicationInfo to get namespaces involved in replication in the controller.
5. Change background sync to skip table config updates for DB scoped configs.

Test Plan:
```
  xcluster {
    db_scoped {
      enabled = true
    }

    dr {
      enabled = true
    }
```
Configure DR, do a switchover. Then do another switchover back to the previous source universe.
Tested on 2.23.0.0-b293 (no GetUniverseReplicationInfo) and 2.23.0.0-b503 (with GetUniverseReplicationInfo)

Reviewers: hzare, cwang, sanketh, spothuraju, xCluster, hsunder

Reviewed By: cwang

Subscribers: asrivastava, esheng, ybase, ycdcxcluster, yql, yugaware

Differential Revision: https://phorge.dev.yugabyte.com/D35907